# FreeWallpaperBackroundEngine

./: CMakeLists.txt  README.md  desktop-wallpaper.desktop  install.sh
build-win/: CMakeCache.txt
example/: README.md  gen.sh
src/: decoder.cpp  decoder.h  engine.cpp  engine.h  frame.h  ipc.h  ipc_linux.cpp  ipc_win.cpp  main.cpp  monitor.cpp  monitor.h  monitor_win.cpp  platform.h  renderer.cpp  renderer.h  renderer_win.cpp  wallpaper.cpp  wallpaper.h  wallpaper_win.cpp
